--- a/NeaProject/NeaProject.csproj
+++ b/NeaProject/NeaProject.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="SkiaSharp.Views.Blazor" Version="2.88.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
