Sprites now can be sets of sprites as well, and the player now faces in the direction they are moving

--- a/NeaProject/NeaProject.csproj
+++ b/NeaProject/NeaProject.csproj
@@ -22,4 +22,10 @@
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\images\MapTiles\all_tiles.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
